--- a/client/my/my/src/components/Header.css
+++ b/client/my/my/src/components/Header.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "NewFont";
-  src: url("../assets/fonts/font.ttf") format("truetype");
+  src: url("../assets/font.ttf") format("truetype");
 }
 
 .header {
