--- a/client/my/my/src/components/Footer.css
+++ b/client/my/my/src/components/Footer.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "ImaginaFont";
-  src: url("../assets/fonts/font.ttf") format("truetype");
+  src: url("../assets/font.ttf") format("truetype");
 }
 
 .footer {
